tdf#134987 DOCX/ODT: fix disappeared and/or not editable embedded charts

Do not create a new name for a removed object, in the pImpl->mpTempObjectContainer,
because the original m_aEntryName of xObj will be overwritten by InsertEmbeddedObject(),
so uno::Reference < embed::XEmbeddedObject >& xObj will misbehave in
EmbeddedObjectContainer::StoreAsChildren and SfxObjectShell::SaveCompletedChildren
and will throw an exception because of objects with the same names.

Change-Id: I9edff9af3a79370ea447ffc6078da3520d0c6f63